Fixes and changes after review